# radio-dreams-v1

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  releases.yml  tests.yml
docs/: api.rst  conf.py  exampledreams.rst  index.rst  installation.rst  toc.rst
scripts/: console.py  plot_array.py
src/arrays/: mwa_phase2.csv
src/radio_dreams/: __init__.py  console.py  interferometer.py
tests/: __init__.py  test_console.py
tests/test_data/: test_mwa.csv
tests/test_radio_dreams/: test_console.py  test_interferometer.py
