[tool.poetry]
name = "radio-dreams"
version = "0.1.0"
license = "MIT"
readme = "README.rst"
description = "Imagined Interferometers"
keywords = ["radio", "interferometer", "simulator"]
homepage = "https://github.com/amanchokshi/radio-dreams"
repository = "https://github.com/amanchokshi/radio-dreams"
authors = ["Aman Chokshi <achokshi@student.unimelb.edu.au>"]

[tool.poetry.scripts]
radio-dreams = "radio_dreams.console:radio_dreams"
plot-array = "radio_dreams.console:plot_array"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
scipy = "^1.6.1"
astropy = "^4.2"
matplotlib = "^3.3.4"
skyfield = "^1.37"
pandas = "^1.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
