[tool.poetry]
name = "radio-dreams"
version = "0.1.0"
license = "MIT"
readme = "README.rst"
description = "Imagined Interferometers"
keywords = ["radio", "interferometer", "simulator"]
homepage = "https://github.com/amanchokshi/radio-dreams"
repository = "https://github.com/amanchokshi/radio-dreams"
authors = ["Aman Chokshi <achokshi@student.unimelb.edu.au>"]

[tool.poetry.scripts]
radio-dreams = "radio_dreams.console:radio_dreams"
plot-array = "radio_dreams.console:plot_array"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.1"
scipy = "^1.6.1"
astropy = "^4.2"
matplotlib = "^3.3.4"
skyfield = "^1.37"
pandas = "^1.1"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.11.1"
black = "^20.8b1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-bugbear = "^21.3.1"
flake8-import-order = "^0.18.1"
flake8-docstrings = "^1.5.0"
Sphinx = "^3.5.1"
codecov = "^2.1.11"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["radio_dreams"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
